--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <nav class="navbar navbar-light nav-color">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <img src="images/Restaurant-Logo.png" height="75" alt="logo">
-        <h4>Beurre Blanc</h4>
+        <img src="images/Restaurant-Logo.png" height="85" alt="logo">
+        <h4 class="navfontcolor">Beurre Blanc</h4>
       </a>
       <button class="navbar-toggler ms-auto" type="button" data-mdb-toggle="collapse"
         data-mdb-target="#navbarToggleExternalContent3" aria-controls="navbarToggleExternalContent3"
@@ -40,6 +40,50 @@
       <a class="btn btn-link btn-block m-0" href="contact.html">Contact Us</a>
     </div>
   </div>
+
+  <div class="container-fluid">
+    <div class="card">
+      <div class="card-body text-center">
+        <h4 class="main-font" style="font-size:40px">Welcome to Beurre Blanc.</h4>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title main-font text-center" style="font-size: 30px;">Hours of Operation</h5>
+        <p class="card-text text-center bold-text">Monday - Thursday</p>
+        <p class="card-text text-center">4:00 pm - 8:00 pm</p>
+        <p class="card-text text-center bold-text">Friday</p>
+        <p class="card-text text-center">5:00 pm - 10:00 pm</p>
+        <p class="card-text text-center bold-text">Saturday & Sunday Brunch</p>
+        <p class="card-text text-center">10:00 am - 9:00 pm</p>
+      </div>
+    </div>
+    <button type="button" class="btn btn-secondary">Reserve A Table</button>
+  </div>
+  <div class="container-fluid">
+    Have a question? you can contact us at BeurreBlanc@gmail.com
+  </div>
+  <footer class="footer mt-auto py-3 fixed-bottom nav-color">
+    <div class="container">
+      <!-- Facebook -->
+      <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
+      <!-- Twitter -->
+      <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i class="fab fa-twitter"></i></a>
+      <!-- Instagram -->
+      <a class="btn btn-primary btn-floating m-1" style="background-color: #928c92" href="#!" role="button"><i class="fab fa-instagram"></i></a>
+      <span class="text-muted">
+        2021 Beau Blanc
+
+      </span>
+    </div>
+
+  </footer>
+
+  </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.0.0/mdb.min.js"></script>
