--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
     <button type="button" class="btn btn-secondary">Reserve A Table</button>
   </div>
   <div class="container-fluid">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">What makes Beurre Blanc special?</h5>
+        <p class="card-text">We are a well established local fine dining restaurant since we open our doors in 1932. Come and enjoy our specialty french cuisine and our world class wine that we provide if all this sounds appetizing then make a reserveration we would love to see you there! </p>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid">
     Have a question? you can contact us at BeurreBlanc@gmail.com
   </div>
   <footer class="footer mt-auto py-3 fixed-bottom nav-color">
@@ -74,7 +82,7 @@
       <!-- Instagram -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #928c92" href="#!" role="button"><i class="fab fa-instagram"></i></a>
       <span class="text-muted">
-        2021 Beau Blanc
+        2022 Beurre Blanc
 
       </span>
     </div>
