--- a/index.html
+++ b/index.html
@@ -48,7 +48,56 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid">
+  <div id="carouselWithCaptions" class="carousel slide" data-bs-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-bs-target="#carouselWithCaptions" data-bs-slide-to="0" class="active"></li>
+      <li data-bs-target="#carouselWithCaptions" data-bs-slide-to="1"></li>
+      <li data-bs-target="#carouselWithCaptions" data-bs-slide-to="2"></li>
+      <li data-bs-target="#carouselWithCaptions" data-bs-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/food1.png" class="d-block w-100" alt="Slide 1">
+        <div class="carousel-caption d-none d-sm-block">
+          <h5>First slide label</h5>
+          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="images/food2.png" class="d-block w-100" alt="Slide 2">
+        <div class="carousel-caption d-none d-sm-block">
+          <h5>Second slide label</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="images/food3.png" class="d-block w-100" alt="Slide 3">
+        <div class="carousel-caption d-none d-sm-block">
+          <h5>Third slide label</h5>
+          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="images/food4.png" class="d-block w-100" alt="Slide 4">
+        <div class="carousel-caption d-none d-sm-block">
+          <h5>Third slide label</h5>
+          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselWithCaptions" role="button" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselWithCaptions" role="button" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </a>
+  </div>
+
+
+  <div class="mt-2">
+  <div class="container-sm">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title main-font text-center" style="font-size: 30px;">Hours of Operation</h5>
@@ -60,9 +109,14 @@
         <p class="card-text text-center">10:00 am - 9:00 pm</p>
       </div>
     </div>
-    <button type="button" class="btn btn-secondary">Reserve A Table</button>
+    <div class="col text-center">
+    <button type="button" class="btn btn-secondary ms-5 bd-highlight d-inline-block button-color">Reserve A Table</button>
+    <button type="button" class="btn btn-secondary ms-5 bd-highlight d-inline-block button-color">Menu</button>
+
+    </div>
   </div>
-  <div class="container-fluid">
+</div>
+  <div class="container-sm">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">What makes Beurre Blanc special?</h5>
@@ -70,10 +124,8 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid">
-    Have a question? you can contact us at BeurreBlanc@gmail.com
-  </div>
-  <footer class="footer mt-auto py-3 fixed-bottom nav-color">
+
+  <footer class="footer mt-auto py-3 nav-color">
     <div class="container">
       <!-- Facebook -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
