--- a/reservations.html
+++ b/reservations.html
@@ -20,7 +20,7 @@
   <nav class="navbar navbar-light nav-color">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <img src="images/Restaurant-Logo.png" height="75" alt="logo">
+        <img src="images/Restaurant-Logo.png" height="85" alt="logo">
         <h4 class="navfontcolor">Beurre Blanc</h4>
       </a>
       <button class="navbar-toggler ms-auto" type="button" data-mdb-toggle="collapse"
@@ -38,7 +38,7 @@
       <a class="btn btn-link btn-block m-0" href="contact.html">Contact Us</a>
     </div>
   </div>
-  <footer class="footer mt-auto py-3 fixed-bottom nav-color">
+  <footer class="footer mt-auto py-3  nav-color">
     <div class="container">
       <!-- Facebook -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
