--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
   <nav class="navbar navbar-light nav-color">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <img src="images/Restaurant-Logo.png" height="75" alt="logo">
+        <img src="images/Restaurant-Logo.png" height="85" alt="logo">
         <h4 class="navfontcolor">Beurre Blanc</h4>
       </a>
       <button class="navbar-toggler ms-auto" type="button" data-mdb-toggle="collapse"
@@ -113,10 +113,10 @@ Array.prototype.slice.call(forms)
     </div>
   </div>
   <div class="col-12">
-    <button class="btn btn-primary" type="submit">Submit form</button>
+    <button class="btn btn-primary button-color" type="submit">Submit form</button>
   </div>
 </form>
-</div>
+ </div>
 </div>
   <footer class="footer mt-auto py-3 fixed-bottom nav-color">
     <div class="container">
