--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
         <img src="images/Restaurant-Logo.png" height="85" alt="logo">
-        <h4 class="navfontcolor">Beurre Blanc</h4>
+        <h1 class="display-3 m-3 navfontcolor">Beurre Blanc</h1>
       </a>
       <button class="navbar-toggler ms-auto" type="button" data-mdb-toggle="collapse"
         data-mdb-target="#navbarToggleExternalContent3" aria-controls="navbarToggleExternalContent3"
@@ -67,6 +67,7 @@ Array.prototype.slice.call(forms)
     }, false)
   })
 -->
+<div class="container-fluid">
 <div class="card">
   <div class="card-body">
     <p class="text-center"> If you have something important you would like to speak to us about please leave a comment down below!</p>
@@ -118,6 +119,9 @@ Array.prototype.slice.call(forms)
 </form>
  </div>
 </div>
+</div>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
   <footer class="footer mt-auto py-3 fixed-bottom nav-color">
     <div class="container">
       <!-- Facebook -->
@@ -128,10 +132,8 @@ Array.prototype.slice.call(forms)
       <a class="btn btn-primary btn-floating m-1" style="background-color: #928c92" href="#!" role="button"><i class="fab fa-instagram"></i></a>
       <span class="text-muted">
         2022 Beurre Blanc
-
       </span>
     </div>
-
   </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
