--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
         <img src="images/Restaurant-Logo.png" height="85" alt="logo">
-        <h4 class="navfontcolor">Beurre Blanc</h4>
+        <h1 class="display-3 m-3 navfontcolor">Beurre Blanc</h1>
       </a>
       <button class="navbar-toggler ms-auto" type="button" data-mdb-toggle="collapse"
         data-mdb-target="#navbarToggleExternalContent3" aria-controls="navbarToggleExternalContent3"
@@ -41,13 +41,14 @@
     </div>
   </div>
 
-  <div class="container-fluid">
+  <div class="container-xxl">
     <div class="card">
       <div class="card-body text-center">
         <h4 class="main-font" style="font-size:40px">Welcome to Beurre Blanc.</h4>
       </div>
     </div>
-  </div>
+  
+  <div class="container-sm">
   <div id="carouselWithCaptions" class="carousel slide" data-bs-ride="carousel">
     <ol class="carousel-indicators">
       <li data-bs-target="#carouselWithCaptions" data-bs-slide-to="0" class="active"></li>
@@ -94,6 +95,7 @@
       <span class="visually-hidden">Next</span>
     </a>
   </div>
+</div>
 
 
   <div class="mt-2">
@@ -108,14 +110,15 @@
         <p class="card-text text-center bold-text">Saturday & Sunday Brunch</p>
         <p class="card-text text-center">10:00 am - 9:00 pm</p>
       </div>
-    </div>
     <div class="col text-center">
-    <button type="button" class="btn btn-secondary ms-5 bd-highlight d-inline-block button-color">Reserve A Table</button>
-    <button type="button" class="btn btn-secondary ms-5 bd-highlight d-inline-block button-color">Menu</button>
-
+    <a href="reservations.html"><button type="button" class="btn btn-secondary ms-5 bd-highlight d-inline-block button-color">Reserve A Table</button></a>
+    <a href="menu.html"><button type="button" class="btn btn-secondary ms-5 bd-highlight d-inline-block button-color">Menu</button></a>
+  <p>&nbsp;</p>
+  </div>
     </div>
   </div>
 </div>
+<div class="mt-2">
   <div class="container-sm">
     <div class="card">
       <div class="card-body">
@@ -124,6 +127,8 @@
       </div>
     </div>
   </div>
+</div>
+</div>
 
   <footer class="footer mt-auto py-3 nav-color">
     <div class="container">
