--- a/reservations.html
+++ b/reservations.html
@@ -21,7 +21,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
         <img src="images/Restaurant-Logo.png" height="85" alt="logo">
-        <h4 class="navfontcolor">Beurre Blanc</h4>
+        <h1 class="display-3 m-3 navfontcolor">Beurre Blanc</h1>
       </a>
       <button class="navbar-toggler ms-auto" type="button" data-mdb-toggle="collapse"
         data-mdb-target="#navbarToggleExternalContent3" aria-controls="navbarToggleExternalContent3"
