--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
   <nav class="navbar navbar-light nav-color">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <img src="images/Restaurant-Logo.png" height="75" alt="logo">
-        <h4>Beurre Blanc</h4>
+        <img src="images/Restaurant-Logo.png" height="85" alt="logo">
+        <h1 class="display-3 m-3 navfontcolor">Beurre Blanc</h1>
       </a>
       <button class="navbar-toggler ms-auto" type="button" data-mdb-toggle="collapse"
         data-mdb-target="#navbarToggleExternalContent3" aria-controls="navbarToggleExternalContent3"
@@ -38,6 +38,104 @@
       <a class="btn btn-link btn-block m-0" href="contact.html">Contact Us</a>
     </div>
   </div>
+  <div class="card">
+    <div class="card-body">
+      <h1 class="card-title text-center main-font">Contact Information</h1>
+      <p class="card-text text-center bold-text">Address</p>
+        <p class="card-text text-center">123 John Doe st, WA, 17778</p>
+        <p class="card-text text-center bold-text">Phone Number</p>
+        <p class="card-text text-center">123-456-7890</p>
+        <p class="card-text text-center bold-text">Email Address</p>
+        <p class="card-text text-center">BeurreBlanc@gmail.com</p>
+    </div>
+  </div>
+
+
+
+  <!-- Note: A custom script is used to activate validation:
+
+var forms = document.querySelectorAll('.needs-validation')
+Array.prototype.slice.call(forms)
+  .forEach(function (form) {
+    form.addEventListener('submit', function (event) {
+      if (!form.checkValidity()) {
+        event.preventDefault()
+        event.stopPropagation()
+      }
+
+      form.classList.add('was-validated')
+    }, false)
+  })
+-->
+<div class="container-fluid">
+<div class="card">
+  <div class="card-body">
+    <p class="text-center"> If you have something important you would like to speak to us about please leave a comment down below!</p>
+<form class="row g-3 needs-validation" novalidate="">
+  <div class="col-md-4">
+    <label for="validationCustom01" class="form-label">First name</label>
+    <input type="text" class="form-control" id="validationCustom01" value="" required="">
+    <div class="valid-feedback">
+      Looks good!
+    </div>
+  </div>
+  <div class="col-md-4">
+    <label for="validationCustom02" class="form-label">Last name</label>
+    <input type="text" class="form-control" id="validationCustom02" value="" required="">
+    <div class="valid-feedback">
+      Looks good!
+    </div>
+  </div>
+  <div class="col-md-4">
+    <label for="validationCustomUsername" class="form-label">Email</label>
+    <div class="input-group has-validation">
+      <span class="input-group-text" id="inputGroupPrepend">@</span>
+      <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required="">
+      <div class="invalid-feedback">
+        Please use a valid email address.
+      </div>
+    </div>
+  </div>
+  <div class="col-md-12">
+    <div class="form-floating">
+      <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea" style="height: 100px"></textarea>
+      <label for="floatingTextarea">Comments</label>
+    </div>
+  </div>
+  <div class="col-12">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required="">
+      <label class="form-check-label" for="invalidCheck">
+        Agree to terms and conditions
+      </label>
+      <div class="invalid-feedback">
+        You must agree before submitting.
+      </div>
+    </div>
+  </div>
+  <div class="col-12">
+    <button class="btn btn-primary button-color" type="submit">Submit form</button>
+  </div>
+</form>
+ </div>
+</div>
+</div>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+  <footer class="footer mt-auto py-3 fixed-bottom nav-color">
+    <div class="container">
+      <!-- Facebook -->
+      <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
+      <!-- Twitter -->
+      <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i class="fab fa-twitter"></i></a>
+      <!-- Instagram -->
+      <a class="btn btn-primary btn-floating m-1" style="background-color: #928c92" href="#!" role="button"><i class="fab fa-instagram"></i></a>
+      <span class="text-muted">
+        2022 Beurre Blanc
+      </span>
+    </div>
+  </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.0.0/mdb.min.js"></script>
