added background to index page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   </div>
 
 
+  <div class="container-fluid" id="content">
   <div class="container-xxl">
     <div class="card">
       <div class="card-body text-center">
