--- a/order.html
+++ b/order.html
@@ -17,7 +17,26 @@
 </head>
 
 <body style="min-height:100vh; display:flex; flex-direction:column;">
-  <nav class="navbar navbar-light nav-color">
+  <nav class="navbar navbar-expand-lg navbar-light nav-color">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/Restaurant-Logo.png" height="120" alt="logo">
+        <h1 class="navfontcolor">Beurre Blanc</h1>
+      </a>
+      <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <a class="nav-link common-font text-white" href="menu.html">Menu</a>
+          <a class="nav-link common-font text-white" href="reservations.html">Reservations</a>
+          <a class="nav-link common-font text-white" href="order.html">Order Online</a>
+          <a class="nav-link common-font text-white" href="contact.html">Contact Us</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <!--<nav class="navbar navbar-light nav-color">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
         <img src="images/Restaurant-Logo.png" height="85" alt="logo">
@@ -37,12 +56,12 @@
       <a class="btn btn-link btn-block border-bottom m-0 common-font" href="order.html">Order Online</a>
       <a class="btn btn-link btn-block m-0 common-font" href="contact.html">Contact Us</a>
     </div>
-  </div>
+  </div>-->
 
 
   <div id="content" class="container-fluid">
   <div class="container">
-  <div class="card" id="orderOnline">
+  <div class="card container-color" id="orderOnline">
     <div class="card-body text-center">
       <h1 class="main-font">Ordering Pickup or Delivery</h1>
       <p class="m-3 p-3 common-font">To place an order for to-go or delivery, please visit your preferred online food ordering and delivery service:</p>
@@ -79,23 +98,87 @@
 
 
 
-  <footer class="footer mt-auto py-3 nav-color" style="margin-top:auto;">
-    <div class="container">
-      <!-- Facebook -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
-      <!-- Twitter -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i class="fab fa-twitter"></i></a>
-      <!-- Instagram -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #928c92" href="#!" role="button"><i class="fab fa-instagram"></i></a>
-
-      <span class="text-muted">
-
-        2022 Beurre Blanc
-
-      </span>
+<footer class="text-center nav-color text-lg-start text-light common-font">
+  <!-- Section: Social media -->
+  <section
+    class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+  >
+    <!-- Left -->
+    <div class="me-5 d-none d-lg-block">
+      <span>Get connected with us on social networks:</span>
     </div>
+    <!-- Left -->
 
-  </footer>
+    <!-- Right -->
+    <div>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-instagram"></i>
+      </a>
+      </a>
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            Links
+          </h6>
+          <p>
+            <a href="#!" class="text-reset">Home</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Menu</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Reservations</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Order Online</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            Contact
+          </h6>
+          <p><i class="fas fa-home me-3"></i> 123 John Doe st, WA, 17778</p>
+          <p>
+            <i class="fas fa-envelope me-3"></i>
+            BeurreBlanc@gmail.com
+          </p>
+          <p><i class="fas fa-phone me-3"></i> + 123 456 7890</p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+    © 2022 Copyright:
+    <a class="text-reset fw-bold common-font" href="">Beurre Blanc</a>
+  </div>
+  <!-- Copyright -->
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
