--- a/order.html
+++ b/order.html
@@ -16,7 +16,7 @@
     
 </head>
 
-<body style="min-height:100vh; display:flex; flex-direction:column;">
+<body style="min-height:100vh; display:flex; flex-direction:column;" id="content">
   <nav class="navbar navbar-expand-lg navbar-light nav-color">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
@@ -59,11 +59,11 @@
   </div>-->
 
 
-  <div id="content" class="container-fluid">
+  
   <div class="container">
   <div class="card container-color" id="orderOnline">
     <div class="card-body text-center">
-      <h1 class="main-font">Ordering Pickup or Delivery</h1>
+      <h1 class="main-font">Order Pickup or Delivery</h1>
       <p class="m-3 p-3 common-font">To place an order for to-go or delivery, please visit your preferred online food ordering and delivery service:</p>
       <div class="container py-3">
         <a href="https://www.doordash.com/" target="_blank">
@@ -79,13 +79,13 @@
     <div class="container" id="images">
       <div class="row">
         <div class="col-lg-4 py-2">
-          <img src="images/pie.png">
+          <img src="images/pie.png" class="rounded">
         </div>
         <div class="col-lg-4 py-2">
-          <img src="images/steak.png">
+          <img src="images/steak.png" class="rounded">
         </div>
         <div class="col-lg-4 py-2">
-          <img src="images/stew.png">
+          <img src="images/stew.png" class="rounded">
         </div>
       </div>
     </div>
@@ -93,8 +93,9 @@
     </div>
   </div>
 </div>
-</div>
 
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 
 
 
