--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     
 </head>
 
-<body>
+<body id="content">
   <nav class="navbar navbar-expand-lg navbar-light nav-color">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
         <img src="images/Restaurant-Logo.png" height="120" alt="logo">
-        <h1 class="navfontcolor">Beurre Blanc</h1>
+      <h1 class="navfontcolor">Beurre Blanc</h1>
       </a>
       <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
@@ -61,7 +61,7 @@
   </div> -->
 
 
-  <div class="container-fluid" id="content">
+  <div class="container-fluid">
   <div class="container-xxl">
     <div class="card container-color">
       <div class="card-body text-center">
@@ -158,6 +158,8 @@
 </div>
 </div>
 
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 
 <footer class="text-center nav-color text-lg-start text-light common-font">
   <!-- Section: Social media -->
